fix: dark mode hero image

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -91,3 +91,7 @@ footer,
 .btn-outline {
   transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
+
+.dark-mode .hero {
+  background-image: url(../img/banners/hero-dark.gif);
+}
